# arachne-pnr

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
examples/rot/: .gitignore  Makefile  rot.pcf  rot.v  rot_8k.pcf
fuzz/blif/: blif.dict
fuzz/blif/testcases/: bram.blif  carry.blif  gb.blif  gb_io.blif  io.blif  pll.blif  rot.blif  tri.blif
fuzz/pcf/: pcf.dict  rot.blif
fuzz/pcf/testcases/: rot.pcf
m4/: arachne-pnr.m4
scripts/: build-dev.sh  build-test-linux.sh  build-test-osx.sh  icestorm.patch  simpletest.sh
src/: arachne-pnr.cc  bitvector.hh  blif.cc  blif.hh  bstream.hh  carry.hh  casting.hh  chipdb.cc  chipdb.hh  configuration.cc  configuration.hh  constant.cc  constant.hh  designstate.cc  designstate.hh  global.cc  global.hh  hashmap.hh  hashset.hh  io.cc  io.hh  line_parser.cc  line_parser.hh  location.cc  location.hh  netlist.cc  netlist.hh  pack.cc  pack.hh  pass.cc  pass.hh  passlist.cc  passlist.hh  pcf.cc  pcf.hh  place.cc  place.hh  priorityq.hh  route.cc  route.hh  (+4 more)
tests/: test_bv.cc  test_us.cc
tests/blif/: attr-with-quoted-numeric-escape.blif  conflicting-names-outputs.blif  escape-test.blif  multiple-models.blif  names-without-model.blif  run-test.sh  run-test.sh.in  sb-dff-model.blif  test.pcf
tests/combinatorial/: generate.py  run-test.sh  run-test.sh.in
tests/error/: carry_loop.blif  dup_pin.blif  dup_pin.pcf  run-test.sh  run-test.sh.in  tri.blif
tests/fsm/: generate.py  run-test.sh  run-test.sh.in
tests/io/: .gitignore  inout_chain.blif  inout_chain.v  inout_in.blif  inout_in.v  inout_inout.blif  inout_out.blif  inout_out.v  inout_tbuf.blif  inout_tbuf.v  inout_z.blif  inout_z.v  run-test.sh  tri.blif  tri.v
tests/regression/: .gitignore  bram1.blif  c3demo.blif  carry_pack_fail1.blif  carry_route_fail1.blif  carry_route_fail1.v  j1a_gb_fail.blif  j1a_gb_fail.v  pin_type_fail.blif  pin_type_fail.pcf  run-test.sh  run-test.sh.in  test1.blif  test2.blif
tests/simple/: .gitignore  bram.blif  carry.blif  run-test.sh  run-test.sh.in  run-valgrind-test.sh  run-valgrind-test.sh.in  sb_gb_io.1k.pcf  sb_gb_io.8k.pcf  sb_gb_io.blif  sb_gb_io.v  sb_pll40.1k.pcf  sb_pll40.8k.pcf  sb_pll40_2_pad.blif  sb_pll40_2_pad.v  sb_pll40_2f_core.blif  sb_pll40_2f_core.v  sb_pll40_2f_pad.blif  sb_pll40_2f_pad.v  sb_pll40_core.blif  sb_pll40_core.v  sb_pll40_pad.blif  sb_pll40_pad.v  sb_up3down5.blif
